--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,13 @@
     </div>
     <div id="contact" class="body-section-1">
         <h2 class="title">GET IN TOUCH</h2>
+        <p class="body-text">
+            We would love to hear from you, send us a shout below!
+        </p>
+        <a href="mailto:ohri.aditya@yahoo.ca">
+            <img alt="email" class="email-button"
+                 src="https://farm4.staticflickr.com/3726/13855354235_887ae071c0_b.jpg">
+        </a>
     </div>
 </body>
 </html>
