--- a/static/style.css
+++ b/static/style.css
@@ -43,6 +43,13 @@
     font-size: 24px;
 }
 
+.list-text {
+    font-family: Arial, Gadget, sans-serif;
+    line-height: 2;
+    color: #333333;
+    font-size: 24px;
+}
+
 .body-section-2 {
     background-color: white;
     padding: 5%
@@ -55,4 +62,17 @@
     width: 25%;
     height: 25%;
     padding: 5%;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.csv-upload {
+    display: block;
+    width: 25%;
+    height: 25%;
+    padding-left: 22.5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
