--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,22 @@
     </div>
     <div class="body-section-2" id="demo">
         <h2 class="title">TRY IT NOW</h2>
-        <ol class="body-text">
+        <ol class="list-text">
             <li>Upload a csv file of your stats with the following format:</li>
+                <ul>
+                    <li>The first 4 columns must contain general player info with mandatory labels at the top row: <b>"FULL NAME"</b>,
+                    <b>"TEAM"</b>, <b>"POS"</b>, and <b>"AGE"</b>.</li>
+                    <li>The rest of the columns can contain any stats of your choice, as long as they're properly labelled.</li>
+                    <li>Leave boxes with missing info empty.</li>
+                    <li>Once ready, download your spreadsheet as a CSV and upload it.</li>
+                </ul>
+            <div class="csv-upload">
+                <label for="file-input">
+                    <img src="https://cms.jotform.com/uploads/image_upload/image_upload/global/21355_upload.png"/>
+                </label>
+
+                <input id="file-input" type="file" accept=".text/csv"/>
+            </div>
             <li>Select the features you would like to visualize</li>
             <li>Click the "Go" button to view your data visualized</li>
         </ol>
