--- a/static/style.css
+++ b/static/style.css
@@ -63,3 +63,31 @@
     height: 25%;
     padding: 5%;
 }
+
+.form-text {
+    font-family: Arial, Gadget, sans-serif;
+    color: #333333;
+    font-size: 24px;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+  background-color: #F6852F;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+input[type=checkbox] {
+    cursor: pointer;
+    line-height: 1.5;
+}
+
+::-webkit-file-upload-button {
+  background: #2FADF6;
+  color: white;
+  padding: 1em;
+  cursor: pointer;
+}
