--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,11 @@
             <li class="navigation-bar-item"><a href="#home">HOME</a></li>
             <li class="navigation-bar-item"><a href="#demo">DEMO</a></li>
             <li class="navigation-bar-item"><a href="#contact">CONTACT</a></li>
+            <li><div class="logo"><img src="{{ url_for('static', filename='Nuclear_Court Science Logo.png') }}"
+                                       width="200"></div></li>
         </ul>
     </div>
-    <div class="body-section-1" id="home">
+    <div class="body-section-top" id="home">
         <h2 class="title">WHO WE ARE</h2>
         <p class="body-text">
             Court Science is a web-based platform that makes the power of data science accessible
