--- a/static/style.css
+++ b/static/style.css
@@ -18,15 +18,28 @@
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 36px 16px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     text-decoration: none;
 }
 
+.logo {
+    text-align: right;
+    padding: 0%;
+}
+
 .body-section-1 {
     background-color: #f2f2f2;
-    padding: 5%
+    padding: 7%;
+}
+
+.body-section-top {
+    background-color: #f2f2f2;
+    padding-top: 10%;
+    padding-bottom: 7%;
+    padding-left: 7%;
+    padding-right: 7%;
 }
 
 .title {
@@ -52,7 +65,7 @@
 
 .body-section-2 {
     background-color: white;
-    padding: 5%
+    padding: 7%
 }
 
 .email-button {
