Writing PDF to tmp and storing in GCS bucket

--- a/templates/response.html
+++ b/templates/response.html
@@ -5,7 +5,7 @@
     <title>Court Science Data Visualization</title>
 </head>
 <body>
-<embed src="{{ url_for('static', filename=pdf_path) }}" width="1000" height="750"
+<embed src="{{new_path}}" width="1000" height="750"
        type="application/pdf">
 </body>
 </html>
