--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,8 @@
     background-color: #333;
     position: fixed;
     top: 0;
-    width: 98.9%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .navigation-bar-item {
@@ -32,6 +33,7 @@
 .body-section-1 {
     background-color: #f2f2f2;
     padding: 7%;
+    box-sizing: border-box;
 }
 
 .body-section-top {
@@ -40,6 +42,8 @@
     padding-bottom: 7%;
     padding-left: 7%;
     padding-right: 7%;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 .title {
@@ -65,7 +69,9 @@
 
 .body-section-2 {
     background-color: white;
-    padding: 7%
+    padding: 7%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .email-button {
