--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
         <p class="body-text">
             We would love to hear from you, send us a shout below!
         </p>
-        <a href="mailto:ohri.aditya@yahoo.ca">
+        <a href="mailto:admin@courtscience.ca">
             <img alt="email" class="email-button"
                  src="https://farm4.staticflickr.com/3726/13855354235_887ae071c0_b.jpg">
         </a>
