--- a/static/style.css
+++ b/static/style.css
@@ -76,9 +76,8 @@
 
 .spreadsheet {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .email-button {
