--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,9 @@
                     <li>Ensure all labels are spelled exactly the same as above (case sensitive).</li>
                     <li>Leave boxes with missing info empty.</li>
                     <li>Once ready, download your spreadsheet as a CSV and upload it.</li>
+                    <li>Don't have a spreadsheet? No problem, <a
+                            href="https://storage.cloud.google.com/statsheet-storage-bucket/Sample.xlsx%20-%20Sheet1.csv" download>
+                        <b>download our sample sheet</b></a>!</li>
                 </ul>
             <li>Select the features you would like to visualize</li>
             <li>Click the "Submit" button to view your data visualized!</li>
