Dynamic Feature Completed!

--- a/static/style.css
+++ b/static/style.css
@@ -106,7 +106,8 @@ input[type=button], input[type=submit], input[type=reset] {
   background-color: #F6852F;
   border: none;
   color: white;
-  padding: 16px 32px;
+  padding-top: 20px;
+  padding-bottom: 40px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
