--- a/templates/response.html
+++ b/templates/response.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Court Science Data Visualization</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
 </head>
 <body>
-<embed src={{pdf_path}} width="1000" height="750"
-       type="application/pdf">
+<embed src={{pdf_path}} width="1000" height="1000"
+       type="application/pdf" style="width:100%;height:48vw">
 </body>
 </html>
