--- a/static/style.css
+++ b/static/style.css
@@ -106,10 +106,10 @@ input[type=button], input[type=submit], input[type=reset] {
   background-color: #F6852F;
   border: none;
   color: white;
-  padding-top: 20px;
-  padding-bottom: 40px;
+  padding: 16px 32px;
+  text-align: center;
   text-decoration: none;
-  margin: 4px 2px;
+  display: inline-block;
   cursor: pointer;
 }
 
